# AI_Recommendation_Chatbot

./: README.md  execution_time.txt  output-May-30.txt  pyproject.toml  task_log-May-30.txt
src/AI_Recommendation_Chatbot/: crew.py  main.py
src/AI_Recommendation_Chatbot/config/: agents.yaml  tasks.yaml
src/AI_Recommendation_Chatbot/tools/: search_victorylive_events.py
src/ai_chatbot_for_personalized_event_recommendations/: crew.py  main.py
src/ai_chatbot_for_personalized_event_recommendations/config/: agents.yaml  tasks.yaml
