[project]
name = "AI_Recommendation_Chatbot"
version = "0.1.0"
description = "AI_Recommendation_Chatbot using crewAI"
authors = [{ name = "Charles Jiang", email = "cjiang0208@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
AI_Recommendation_Chatbot = "AI_Recommendation_Chatbot.main:run"
run_crew = "AI_Recommendation_Chatbot.main:run"
train = "AI_Recommendation_Chatbot.main:train"
replay = "AI_Recommendation_Chatbot.main:replay"
test = "AI_Recommendation_Chatbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
